# Frequent-Mining-Algorithms

./: .flake8  README.md  setup.cfg  setup.py
FIM/: FIM.py
example/FIM/: apriori.ipynb
src/: __init__.py
src/FIM/: FIMAlgorithms.py  __init__.py  apriori.py  association_rules.py  eclat.py  fpgrowth.py  hmine.py  utils.py
src/FIM/tests/: apriori_test.py  association_rules_test.py  base_test.py  eclat_test.py  fpgrowth_test.py  hmine_test.py
