[metadata]
name = FIMProject
version = 0.0.2
author = Fatih Sen
author_email = fatih.sn2000@gmail.com   
description = FIM Algorithms package for ARM
long_description = file: README.md
long_description_content_type = text/markdown
keywords=FIM, Frequent Itemset Mining, Association Rule Mining, ARM
url = https://github.com/fatihsen20/FIM
readme = README.md
requires-python = ">=3.7"
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    
project.urls = 
    Homepage = https://github.com/fatihsen20/FIM
    Source = https://github.com/fatihsen20/FIM

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src

[options.extras_require] = numpy
