[metadata]
name = fimproject
version = 0.0.7
author = Fatih Sen
author_email = fatihsen.data@gmail.com
description = Frequent Itemset Mining and Frequent Sequence Mining Algorithms package for ARM
long_description = file: README.md
long_description_content_type = text/markdown
keywords=FIM, Frequent Itemset Mining, Frequent Sequence Mining, Association Rule Mining, ARM
url = https://github.com/fatihsen20/Frequent-Mining-Algorithms
readme = README.md
requires-python = ">=3.7"
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    
project.urls = 
    Homepage = https://github.com/fatihsen20/Frequent-Mining-Algorithms
    Source = https://github.com/fatihsen20/Frequent-Mining-Algorithms

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src

[options.extras_require] 
numpy = numpy
pandas = pandas
